--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
