add media query for LinkForm

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
 	background: #3494e6;
 	background: -webkit-linear-gradient(to right, #ec6ead, #3494e6);
 	background: linear-gradient(to right, #ec6ead, #3494e6);
+	font-weight: bold;
 }
 
 button{
